# foruster

./: .gitignore  CONTRIBUTING.md  Cargo.toml  Dioxus.toml  LICENSE  LICENSE-MIT  README.es.md  README.md  SECURITY.md  crowdin.yml  foruster.code-workspace  tailwind.config.js
.cargo/: config.toml
crates/analysis/: Cargo.toml
crates/analysis/src/: config.rs  engine.rs  file_analyzer.rs  finding.rs  lib.rs  walker.rs
crates/api/: Cargo.toml
crates/api/src/: analysis_api.rs  lib.rs  profile_api.rs  storage_api.rs
crates/desktop/: Cargo.toml  build.rs
crates/desktop/src/: launcher.rs  lib.rs  main.rs  pdf_report.rs
crates/desktop/src/bridges/: analysis_result.rs  analysis_result_bridge.rs  disk_list.rs  mod.rs  path_management.rs  profile_list.rs
crates/desktop/src/cache/: mod.rs  thumbnail_cache.rs
crates/desktop/ui/: globals.slint  main.slint  styles.slint
crates/desktop/ui/blocks/: bridges.slint  stack.slint
crates/desktop/ui/i18n/: foruster-desktop.pot  foruster.pot
crates/desktop/ui/i18n/en_GB/LC_MESSAGES/: foruster-desktop.po
crates/desktop/ui/i18n/en_US/: foruster-desktop.pot
crates/desktop/ui/i18n/en_US/LC_MESSAGES/: foruster-desktop.po
crates/desktop/ui/i18n/fr/LC_MESSAGES/: foruster-desktop.po
crates/desktop/ui/i18n/fr_FR/: foruster-desktop.pot
crates/desktop/ui/i18n/fr_FR/LC_MESSAGES/: foruster-desktop.po
crates/desktop/ui/i18n/pt_PT/: foruster-desktop.pot
crates/desktop/ui/i18n/pt_PT/LC_MESSAGES/: foruster-desktop.po
crates/desktop/ui/pages/: analysis-result.slint  disk-list.slint  path-management.slint  profile-list.slint  profile-menu.slint
crates/desktop/ui/translations/: foruster.po
crates/foruster_storage/: Cargo.toml
crates/foruster_storage/src/: device_event_listener.rs  lib.rs  link_layers.rs  logical_layer_extractor.rs  physical_layer_extractor.rs  storage_extractor.rs  utils.rs
crates/reporting/: Cargo.toml
crates/reporting/src/: lib.rs  pdf_report.rs
crates/storage/: Cargo.toml  LICENSE  README.md
crates/storage/src/: device_event_listener.rs  lib.rs  link_layers.rs  logical_layer_extractor.rs  physical_layer_extractor.rs  storage_extractor.rs  utils.rs
crates/storage/src/core/: disk.rs  identification_data.rs  mod.rs  partition.rs  volume.rs
crates/storage/src/linux/: driver.rs  filesystem.rs  hardware.rs  mod.rs
crates/storage/src/windows/: device_event_listener.rs  driver.rs  filesystem.rs  hardware.rs  mod.rs
doc/: INDEX.md  (+5 more)
foruster_app/: Cargo.toml  README.md  build.rs
foruster_app/src/: callback.rs  domain.rs  main.rs  mvc.rs  ui.rs
foruster_app/src/domain/: analysis_models.rs  controllers.rs  models.rs  path_analyzer.rs  repositories.rs
foruster_app/src/domain/controllers/: disk_controller.rs  disk_list_controller.rs  path_controller.rs  path_list_controller.rs  profiles_controller.rs
foruster_app/src/domain/models/: disk_item.rs  path_item.rs  profile_item.rs
foruster_app/src/domain/repositories/: disk_repository_impl.rs  path_repository_impl.rs  profile_repository_impl.rs  traits.rs
foruster_app/src/domain/repositories/traits/: disk_repository.rs  file_repository.rs  path_repository.rs  profile_repository.rs
foruster_app/src/mvc/: controllers.rs  models.rs  repositories.rs
foruster_app/src/mvc/controllers/: disk_list_controller.rs
foruster_app/src/mvc/models/: disk_model.rs
foruster_app/src/mvc/repositories/: mock_disk_repository.rs
foruster_app/src/mvc/repositories/traits/: disk_repository.rs
foruster_app/src/ui/: disk_adapter.rs  disk_list_adapter.rs  path_adapter.rs  path_analysis_connector.rs  path_list_adapter.rs  profiles_adapter.rs
foruster_app/ui/: app-window.slint  app.slint  global.slint  index.slint
foruster_app/ui/components/: LoadingIndicator.slint  disk_list.slint  disk_selection_list.slint  disks_screen.slint  focus_touch_area.slint  icon_button.slint  index.slint  path_list.slint  profile.slint  selection_list_view.slint  state_layer.slint  styling.slint
foruster_app/ui/modules/surrealism-ui/: index.slint  surrealism-ui.toml
foruster_app/ui/modules/surrealism-ui/font/: index.slint
foruster_app/ui/modules/surrealism-ui/src/alert/: alert.slint  index.slint
foruster_app/ui/modules/surrealism-ui/src/avatar/: avatar.slint  index.slint
foruster_app/ui/modules/surrealism-ui/src/badge/: badge.slint  index.slint
foruster_app/ui/modules/surrealism-ui/src/bezier/: bezier.slint
foruster_app/ui/modules/surrealism-ui/src/button/: button.slint  index.slint
foruster_app/ui/modules/surrealism-ui/src/calendar/: calendar.slint  index.slint
foruster_app/ui/modules/surrealism-ui/src/card/: card.slint  index.slint
foruster_app/ui/modules/surrealism-ui/src/carousel/: carousel.slint  index.slint
foruster_app/ui/modules/surrealism-ui/src/catalog/: catalog.slint  index.slint
foruster_app/ui/modules/surrealism-ui/src/checkbox/: checkbox.slint  index.slint
foruster_app/ui/modules/surrealism-ui/src/collapse/: collapse.slint  index.slint  item.slint
foruster_app/ui/modules/surrealism-ui/src/collection/: collection.slint  index.slint
foruster_app/ui/modules/surrealism-ui/src/dialog/: dialog.slint  index.slint
foruster_app/ui/modules/surrealism-ui/src/divider/: divider.slint  index.slint
foruster_app/ui/modules/surrealism-ui/src/drawer/: drawer.slint  index.slint
foruster_app/ui/modules/surrealism-ui/src/file/: file.slint  index.slint
foruster_app/ui/modules/surrealism-ui/src/header/: header.slint  index.slint
foruster_app/ui/modules/surrealism-ui/src/icon/: icon.slint  index.slint
foruster_app/ui/modules/surrealism-ui/src/input/: index.slint  input.slint
foruster_app/ui/modules/surrealism-ui/src/keyboard/: index.slint  keyboard.slint
foruster_app/ui/modules/surrealism-ui/themes/: index.slint
foruster_app/ui/modules/surrealism-ui/use/: index.slint
foruster_app/ui/views/: AnalysisResultView.slint  DiskAnalysisView.slint  DiskListView.slint  PathManagementView.slint  ProfilesView.slint  disk_analysis.slint  disk_list_view.slint  index.slint  main.slint  path_management_view.slint  profile_selection_view.slint  profiles_view.slint
(+299 files in other folders)
