# SPDX-License-Identifier: GPL-3.0-or-later
[package]
name = "foruster"
version = "0.3.0"
authors = ["M4RZ3R0 <30533649+M4RZ3R0@users.noreply.github.com>"]
edition = "2021"

[dependencies]
dioxus = { version = "0.6", features = ["desktop", "router"]}
dioxus-free-icons = { version = "0.9", features = ["bootstrap"] }
manganis = "0.6.1"
walkdir = "2.5.0"
native-dialog = "0.7.0"
chrono = { version = "0.4.39", features = ["serde"] }
simple_pdf_generator_derive = "0.2.1"
simple_pdf_generator = "0.3.0"
serde = "1.0.217"
serde_json = "1.0.135"
infer = "0.16.0"
sha256 = "1.5.0"
sysinfo = "0.33.1"
tokio = "1.43.0"
glob = "0.3.2"
regex = "1.11.1"
open = "5.3.2"
charts-rs = "0.3.19"

# Debug
tracing = "0.1.41"
dioxus-logger = "0.6.1"
select = "0.6.0"
image = "0.25.5"
base64 = "0.22.1"

[target.'cfg(windows)'.dependencies]
wmi = "0.14.3"

[profile.release]
opt-level = "z"
debug = false
lto = true
codegen-units = 1
panic = "abort"
strip = true
incremental = false

[profile.wasm-dev]
inherits = "dev"
opt-level = 1

[profile.server-dev]
inherits = "dev"

[profile.android-dev]
inherits = "dev"
