# SPDX-License-Identifier: GPL-3.0-or-later
[package]
name = "foruster_app"
version = "0.1.0"
edition = "2021"
authors = ["m4rz3r0 <github@m4rz3r0.anonaddy.com>"]
build = "build.rs"
description = ""

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
slint = "1.9.1"

[build-dependencies]
slint-build = "1.9.1"