# SPDX-License-Identifier: GPL-3.0-or-later
[package]
name = "api"
authors.workspace = true
version.workspace = true
edition.workspace = true
rust-version.workspace = true

[dependencies]
app_core = { path = "../core" }
storage = { path = "../storage" }
profiling = { path = "../profiling" }
analysis = { path = "../analysis" }
tokio = { version =  "1.46.1", features = ["full"]  }