# SPDX-License-Identifier: GPL-3.0-or-later
[package]
name = "api"
authors.workspace = true
version.workspace = true
edition.workspace = true
rust-version.workspace = true

[dependencies]
app_core = { path = "../core" }
# foruster-storage = { git = "ssh://git@git.disroot.org/m4rz3r0/foruster-storage.git" }
foruster-storage = { path = "../foruster-storage" }
profiling = { path = "../profiling" }
analysis = { path = "../analysis" }
tokio = { version =  "1.47.1", features = ["full"]  }
