# SPDX-License-Identifier: GPL-3.0-or-later
[package]
name = "desktop"
edition.workspace = true
version.workspace = true

[dependencies]
slint = { workspace = true }
app_core = { path = "../core" }
profiling = { path = "../profiling" }
api = { path = "../api" }
analysis = { path = "../analysis" }
rfd = "0.15.4"
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
image = "0.25.8"
once_cell = "1.21.3"

[build-dependencies]
slint-build = { workspace = true }
