# SPDX-License-Identifier: GPL-3.0-or-later
[package]
name = "reporting"
version = "0.1.0"
edition = "2021"

[dependencies]
api = { path = "../api" }
analysis = { path = "../analysis" }
blake3 = "1.8.2"
genpdfi = "0.2.5"
hex = "0.4.3"
md-5 = "0.8.0"
sha2 = "0.10.9"
unicode-segmentation = "1.12.0"
chrono = "0.4.42"
app_core = { version = "0.1.0", path = "../core" }
rfd = "0.16.0"
