# SPDX-License-Identifier: GPL-3.0-or-later
[package]
name = "storage"
version = "0.1.0"
edition = "2021"

[dependencies]
app_core = { path = "../core" }

[dependencies.windows]
version = "0.61"
features = [
    "Win32_Foundation",
    "Win32_Storage_FileSystem",
    "Win32_Storage_Nvme",
    "Win32_Security",
    "Win32_System_IO",
    "Win32_System_Ioctl",
    "Win32_Devices_DeviceAndDriverInstallation"
]
